@@ -1,5 +1,6 @@
 package org.openxava.web.taglib;
 
+import javax.servlet.*;
 import javax.servlet.http.*;
 import javax.servlet.jsp.*;
 import javax.servlet.jsp.tagext.*;
@@ -10,6 +11,7 @@ import org.openxava.model.meta.*;
 import org.openxava.util.*;
 import org.openxava.view.*;
 import org.openxava.web.*;
+import org.openxava.web.dwr.Module;
 
 
 /**
@@ -31,22 +33,28 @@ public class DescriptionsListTag extends TagSupport {
 			viewObject = (viewObject == null || viewObject.equals(""))?"xava_view":viewObject;
 			View view = (View) context.get(request, viewObject);
 
-			MetaReference metaReference = view.getMetaReference(reference);
+			MetaReference metaReference = view.getMetaReference(reference).cloneMetaReference();
+			metaReference.setName(reference);
 			String prefix = request.getParameter("propertyPrefix");
 			prefix = prefix == null?"":prefix;
 			String application = request.getParameter("application");
 			String module = request.getParameter("module");
 			String referenceKey = Ids.decorate(application, module, prefix + reference); 
 			request.setAttribute(referenceKey, metaReference);
-			String editorURL = "reference.jsp?referenceKey=" + referenceKey + "&onlyEditor=true&frame=false&composite=false&descriptionsList=true"; 
+			String editorURL = "reference.jsp?referenceKey=" + referenceKey + "&onlyEditor=true&frame=false&composite=false&descriptionsList=true";
+			String editorPrefix = Module.isPortlet()?"/WEB-INF/jsp/xava/":"/xava/";  
 			try {
-				// If the JSP that uses this tag is in a subfolder
-				pageContext.include("../xava/" + editorURL);
+				pageContext.include(editorPrefix + editorURL); 
 			}
-			catch (Exception ex) {
-				// If the JSP that uses this tag is in root folder
-				pageContext.include("xava/" + editorURL);
-			}						
+			catch (ServletException ex) { 
+				Throwable cause = ex.getRootCause() == null?ex:ex.getRootCause(); 
+				log.error(cause.getMessage(), cause);
+				pageContext.include(editorPrefix + "editors/notAvailableEditor.jsp"); 
+			}
+			catch (Exception ex) {	
+				log.error(ex.getMessage(), ex);
+				pageContext.include(editorPrefix + "editors/notAvailableEditor.jsp"); 
+			}											
 		}
 		catch (Exception ex) {
 			log.error(ex.getMessage(), ex);
