@@ -13,8 +13,9 @@ public class ServiceExpensesTest extends ModuleTestBase {
 		super(testName, "ServiceExpenses");		
 	}
 		
-	public void testSeachKeysInElementCollection_enumInElementCollection() throws Exception {
+	public void testSeachKeysEnumsAndDescriptionsListInElementCollection() throws Exception { 
 		execute("CRUD.new");
+		assertLabelInCollection("expenses", 4, "Receptionist");
 		setValue("description", "JUNIT EXPENSES");
 		setValue("expenses.0.invoice.year", "2007");
 		assertValue("expenses.0.invoice.amount", "");
@@ -28,7 +29,18 @@ public class ServiceExpensesTest extends ModuleTestBase {
 			{ "2", "Rejected" }
 		};		
 		assertValidValues("expenses.0.status", statusValidValues);
-		setValue("expenses.0.status", "1");		
+		setValue("expenses.0.status", "1");
+		
+		String [][] receptionistValidValues = {
+			{ "", "" },
+			{ "2", "ANTONIOA" },
+			{ "3", "JUAN" },
+			{ "1", "PEPE" },
+			{ "4", "PEPE" }
+		};
+		assertValidValues("expenses.0.receptionist.oid", receptionistValidValues);
+		setValue("expenses.0.receptionist.oid", "3");		
+		
 		execute("CRUD.save");
 		
 		assertValue("description", "");
@@ -36,6 +48,7 @@ public class ServiceExpensesTest extends ModuleTestBase {
 		assertValue("expenses.0.invoice.number", "");
 		assertValue("expenses.0.invoice.amount", "");
 		assertValue("expenses.0.status", "");
+		assertValue("expenses.0.receptionist.oid", ""); 
 		
 		execute("Mode.list");
 		execute("Mode.detailAndFirst");
@@ -45,6 +58,7 @@ public class ServiceExpensesTest extends ModuleTestBase {
 		assertValue("expenses.0.invoice.number", "2");
 		assertValue("expenses.0.invoice.amount", "1,730.00");
 		assertValue("expenses.0.status", "1");
+		assertValue("expenses.0.receptionist.oid", "3"); 
 		
 		execute("CRUD.delete");
 		assertNoErrors();
